# GEPS

./: Analysis1.R  Analysis1_old.R  CMakeLists.txt  Check.R  README.org  Simple.R  header.h  lsirm1pl_ss.cpp  main.c  mod_select.R
FILE/: fun_stat.c  stat.c
Original_DATA/: item.R
